Fix cell alignment for JBrowse track selector

--- a/src/app/jbrowse-track-picker/jbrowse-track-picker.component.css
+++ b/src/app/jbrowse-track-picker/jbrowse-track-picker.component.css
@@ -25,10 +25,6 @@ td {
   padding: 0.2em 0.5em;
 }
 
-td, th, td input {
-  vertical-align: top;
-}
-
 td:first-child {
   padding: 0.5em;
 }
